--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,26 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="8dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="22dp"
-    app:cardElevation="8dp">
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/products_item_height"
+    android:padding="15dp">
 
-    <FrameLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="3dp">
 
-        <TextView
-            android:id="@+id/txtname"
+        <ImageView
+            android:id="@+id/ivProduct"
+            android:layout_width="300px"
+            android:layout_height="300px"
+            android:scaleType="centerCrop"
+            android:src="@drawable/meli"/>
+
+        <RelativeLayout
+            android:layout_gravity="left"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            tools:text="hola"
-            android:textSize="26dp" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-    </FrameLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-</androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="@dimen/margin_item"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="@dimen/margin_item"
+                    android:maxLines="2"
+                    android:textSize="@dimen/title_text"
+                    tools:text="title" />
+
+                <TextView
+                    android:id="@+id/tvPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/tvTitle"
+                    android:layout_marginLeft="@dimen/margin_item"
+                    android:layout_marginTop="@dimen/margin_item_top"
+                    android:layout_marginRight="@dimen/margin_item"
+                    android:textSize="@dimen/price_text"
+                    android:textStyle="bold"
+                    tools:text="price" />
+
+                <TextView
+
+                    android:id="@+id/tvCuotes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/tvPrice"
+                    android:layout_marginLeft="@dimen/margin_item"
+                    android:layout_marginRight="@dimen/margin_item"
+                    android:textSize="@dimen/payment_text"
+                    tools:text="title" />
+
+                <TextView
+                    android:id="@+id/tvSend"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/tvCuotes"
+                    android:layout_marginLeft="@dimen/margin_item"
+                    android:layout_marginTop="@dimen/margin_item_top"
+                    android:layout_marginRight="@dimen/margin_item"
+                    android:textColor="@color/green_meli"
+                    android:textSize="@dimen/shipping_text"
+                    tools:text="Envío gratis" />
+
+                <TextView
+                    android:id="@+id/tvAvailable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/tvSend"
+                    android:layout_marginLeft="@dimen/margin_item"
+                    android:layout_marginTop="@dimen/margin_item_top"
+                    android:layout_marginRight="@dimen/margin_item"
+                    android:textColor="@color/gray_meli"
+                    android:textSize="@dimen/available_text"
+                    tools:text="title" />
+
+
+                <RatingBar
+                    android:layout_alignBottom="@+id/tvAvailable"
+                    android:layout_marginTop="@dimen/margin_item_top"
+                    android:id="@+id/rbSeller"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_marginLeft="@dimen/margin_item"
+                    android:layout_marginRight="@dimen/margin_item"
+                    android:foregroundGravity="left"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:progressBackgroundTint="@android:color/darker_gray"
+                    android:progressTint="@color/blue_meli"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:visibility="visible" />
+            </LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
+
+</FrameLayout>
