--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,36 +7,50 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.MainActivity">
 
-    <Spinner
-        android:id="@+id/spSite"
+    <LinearLayout
+        android:id="@+id/headerHome"
         android:layout_width="match_parent"
-        android:spinnerMode="dialog"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0"/>
+        android:layout_height="150px"
+        android:background="@color/yellow_meli"
+        android:gravity="center"
+        android:padding="5dp">
+
+        <ImageView
+            android:id="@+id/ivProduct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:src="@drawable/meli_welcome" />
+    </LinearLayout>
 
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/svProducts"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintVertical_bias="0"
+        app:iconifiedByDefault="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spSite"/>
+        app:layout_constraintTop_toBottomOf="@+id/headerHome"
+        app:layout_constraintVertical_bias="0"
+
+        />
 
     <androidx.recyclerview.widget.RecyclerView
-
         android:id="@+id/rvProducts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/svProducts" />
 
-
-
+    <ProgressBar
+        android:id="@+id/pbloading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/progressBarMeli"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
