--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,8 @@
     </style>
 
     <style name="Theme.MeliTest" parent="Base.Theme.MeliTest" />
+
+    <style name="progressBarMeli">
+        <item name="colorAccent">@color/yellow_meli</item> <!-- Whatever color you want-->
+    </style>
 </resources>
