--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.MainActivity">
 
+
     <LinearLayout
         android:id="@+id/headerHome"
         android:layout_width="match_parent"
@@ -19,8 +20,10 @@
             android:id="@+id/ivProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"
             android:src="@drawable/meli_welcome" />
+
+
+
     </LinearLayout>
 
 
@@ -34,6 +37,21 @@
         app:layout_constraintTop_toBottomOf="@+id/headerHome"
         app:layout_constraintVertical_bias="0"
 
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fbModal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/msg_welcome"
+        android:src="@drawable/settings"
+        app:backgroundTint="@color/yellow_meli"
+        app:tint="@color/blue_meli"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <androidx.recyclerview.widget.RecyclerView
