--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.MainActivity">
 
-
     <LinearLayout
         android:id="@+id/headerHome"
         android:layout_width="match_parent"
@@ -17,11 +16,36 @@
         android:padding="10dp">
 
         <ImageView
-            android:id="@+id/ivProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/meli_welcome" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/hearsite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/yellow_meli"
+        app:layout_constraintTop_toBottomOf="@+id/headerHome"
+        android:gravity="left"
+        android:padding="10dp">
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/settings" />
+
+        <TextView
+            android:id="@+id/titleSite"
+            android:layout_marginLeft="@dimen/margin_item_top"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/title_text"
+            android:textColor="@color/gray_meli"
+            tools:text="MCO"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
@@ -34,24 +58,9 @@
         app:iconifiedByDefault="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerHome"
+        app:layout_constraintTop_toBottomOf="@+id/hearsite"
         app:layout_constraintVertical_bias="0"
 
-        />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fbModal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/msg_welcome"
-        android:src="@drawable/settings"
-        app:backgroundTint="@color/yellow_meli"
-        app:tint="@color/blue_meli"
-        app:borderWidth="0dp"
-        app:elevation="6dp"
-        app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <androidx.recyclerview.widget.RecyclerView
