feat: add product detail in app.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,19 @@
     <style name="Base.Theme.MeliTest" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:statusBarColor">@color/yellow_meli</item>
+    </style>
+
+    <style name="Theme.MeliTest" parent="Base.Theme.MeliTest" />
+
+    <style name="progressBarMeli">
+        <item name="colorAccent">@color/yellow_meli</item>
+    </style>
+
+    <style name="Theme.app.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/yellow_meli</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/meli</item>
+        <item name="windowSplashScreenAnimationDuration">300</item>
+        <item name="postSplashScreenTheme">@style/Theme.MeliTest</item>
     </style>
 </resources>
