--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -18,7 +18,7 @@
             android:id="@+id/ivProduct"
             android:layout_width="300px"
             android:layout_height="300px"
-            android:scaleType="fitXY"
+            android:scaleType="fitCenter"
             android:src="@drawable/meli"/>
 
         <RelativeLayout
