--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,10 @@
     <dimen name="available_text">13dp</dimen>
     <dimen name="margin_top_modal">15dp</dimen>
     <dimen name="title_modal">20dp</dimen>
+    <dimen name="detail_available_text">15dp</dimen>
+    <dimen name="detail_title_text">20dp</dimen>
+    <dimen name="detail_price_text">25dp</dimen>
+    <dimen name="detail_shipping_text">13dp</dimen>
+    <dimen name="detail_payment_text">13dp</dimen>
+    <dimen name="margin_image_detail">50dp</dimen>
 </resources>
