--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -90,6 +90,7 @@
                     android:layout_marginRight="@dimen/margin_item"
                     android:textColor="@color/gray_meli"
                     android:textSize="@dimen/available_text"
+                    android:visibility="invisible"
                     tools:text="title" />
 
 
