--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -24,6 +24,33 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints">
 
+            <LinearLayout
+                android:id="@+id/hearsite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/yellow_meli"
+                android:gravity="left"
+                app:layout_constraintTop_toBottomOf="@+id/headerHome">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/settings" />
+
+                <TextView
+                    android:id="@+id/titleSite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/margin_item_top"
+                    android:textColor="@color/gray_meli"
+                    android:textSize="@dimen/title_text"
+                    android:textStyle="bold"
+                    tools:text="MCO" />
+
+
+            </LinearLayout>
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -31,33 +58,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/hearsite"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/yellow_meli"
-            android:gravity="left"
-            android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/headerHome">
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/settings" />
-
-            <TextView
-                android:id="@+id/titleSite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/margin_item_top"
-                android:textColor="@color/gray_meli"
-                android:textSize="@dimen/title_text"
-                android:textStyle="bold"
-                tools:text="MCO" />
-
-
-        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/linearcondition"
@@ -66,7 +67,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/hearsite">
+            app:layout_constraintTop_toBottomOf="@+id/headerHome">
 
             <TextView
                 android:id="@+id/tvCondition"
@@ -175,6 +176,7 @@
             android:textSize="@dimen/detail_available_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvSend"
+             android:visibility="invisible"
             tools:text="title" />
 
         <TextView
@@ -194,9 +196,9 @@
 
         <RelativeLayout
             android:id="@+id/linearcantidad"
+            style="@style/quantity"
             android:layout_width="match_parent"
-            android:background="@color/gray_divider_meli"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:layout_marginLeft="@dimen/margin_item"
             android:layout_marginRight="@dimen/margin_item"
             app:layout_constraintStart_toStartOf="parent"
@@ -208,7 +210,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:layout_marginEnd="@dimen/margin_item"
+                android:layout_marginLeft="@dimen/margin_item"
                 android:textSize="@dimen/detail_available_text"
                 android:layout_alignParentStart="true"
                 tools:text="title"
@@ -221,12 +223,14 @@
                 android:textColor="@color/gray_meli"
                 android:textSize="@dimen/detail_available_text"
                 android:layout_toRightOf="@+id/tvcantidad"
+                android:layout_marginLeft="@dimen/margin_item"
                 tools:text="title2" />
 
             <ImageView
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/margin_item"
                 android:scaleType="fitCenter"
                 android:src="@drawable/arrow_meli" />
 
