--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,7 +21,11 @@
 
     <style name="AppTheme.RoundedCornerMaterialButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/rounded_shape</item>
+        <item name="android:textColorPrimary">@color/white</item>
+    </style>
 
+    <style name="quantity" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/rounded_shape_quantity</item>
         <item name="android:textColorPrimary">@color/white</item>
     </style>
 </resources>
