--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray_meli">#666</color>
     <color name="gray_divider_meli">#eee</color>
     <color name="yellow_meli">#fff159</color>
+    <color name="blue_clear_meli">#f4f9ff</color>
 </resources>
