--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
     <style name="Base.Theme.MeliTest" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
@@ -27,5 +27,10 @@
     <style name="quantity" parent="Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/rounded_shape_quantity</item>
         <item name="android:textColorPrimary">@color/white</item>
+    </style>
+
+    <style name="AppTheme.RoundedCornerMaterialButtonCart" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/rounded_shape_cart</item>
+        <item name="android:textColorPrimary">@color/blue_meli</item>
     </style>
 </resources>
