--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,4 +18,19 @@
         <item name="windowSplashScreenAnimationDuration">300</item>
         <item name="postSplashScreenTheme">@style/Theme.MeliTest</item>
     </style>
+
+    <style name="AppTheme.RoundedCornerMaterialButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/rounded_shape</item>
+        <item name="android:textColorPrimary">@color/white</item>
+    </style>
+
+    <style name="quantity" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/rounded_shape_quantity</item>
+        <item name="android:textColorPrimary">@color/white</item>
+    </style>
+
+    <style name="AppTheme.RoundedCornerMaterialButtonCart" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/rounded_shape_cart</item>
+        <item name="android:textColorPrimary">@color/blue_meli</item>
+    </style>
 </resources>
